--- a/catchgame.css
+++ b/catchgame.css
@@ -5,6 +5,7 @@ body{
 .game-window{
     width: 100%;
     position: relative;
+    background-color: lightgray;
 }
 .html, #basket{
     position: absolute;
